cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(spring-launcher)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_REQUIRED TRUE)

set(BINDIR  "bin"                CACHE STRING "Where to install binaries")
set(LIBDIR  "lib"                CACHE STRING "Where to install libraries")
# pr-downloader
If (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/pr-downloader/CMakeLists.txt")
    MESSAGE(FATAL_ERROR "${CMAKE_CURRENT_SOURCE_DIR}/pr-downloader/ is missing, please run\n git submodule init && git submodule update")
EndIf()
find_package(CURL REQUIRED)
set(CMAKE_BUILD_TYPE "RELEASE")
set(CLEAR_COMPILER_FLAGS true)
set(PRD_BINDIR ${BINDIR} CACHE PATH "" FORCE)
set(PRD_LIBDIR ${LIBDIR} CACHE PATH "" FORCE)
Add_Subdirectory(pr-downloader)


#find_package(PkgConfig REQUIRED)
#pkg_search_module(GLFW REQUIRED STATIC glfw3)
#include_directories(${GLFW_INCLUDE_DIRS})


# include_directories(/home/gajop/opt/glfw3/include)

# find_package(glfw3 REQUIRED)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++") #



# Disable building extras we won't need (pure C++ project)
set(NANOGUI_BUILD_EXAMPLE OFF CACHE BOOL " " FORCE)
set(NANOGUI_BUILD_PYTHON  OFF CACHE BOOL " " FORCE)
set(NANOGUI_INSTALL       OFF CACHE BOOL " " FORCE)
set(NANOGUI_BUILD_SHARED  OFF CACHE BOOL " " FORCE)

# Add the configurations from nanogui
add_subdirectory(nanogui)

# For reliability of parallel build, make the NanoGUI targets dependencies
set_property(TARGET glfw glfw_objects nanogui PROPERTY FOLDER "dependencies")

# Various preprocessor definitions have been generated by NanoGUI
add_definitions(${NANOGUI_EXTRA_DEFS})

# On top of adding the path to nanogui/include, you may need extras
include_directories(${NANOGUI_EXTRA_INCS})
include_directories(nanogui/include)

# Lastly, additional libraries may have been built for you.  In addition to linking
# against NanoGUI, we need to link against those as well.
file(GLOB SOURCES src/*.cpp)
add_executable(spring-launcher ${SOURCES})
target_link_libraries(spring-launcher pr-downloader_static nanogui ${NANOGUI_EXTRA_LIBS})
